--- a/index.html
+++ b/index.html
@@ -2,32 +2,46 @@
 <html>
     <head>
       <title>Lisa's Lavish Website</title>
+      <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
 
+        <div id="all-contents">
+
+        </div>
         <div>
             <nav>
-
+                <h1>Lisa's Lavish Website</h1>
+                <ul id="nav-ul">
+                    <li class="nav-li">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                </ul>
             </nav>
           
             <main>
                 side bar
-                <div>
-
-                </div>
+                <div class="sidebar">
+                  <img class="sidebar-img" src="https://e0.pxfuel.com/wallpapers/105/67/desktop-wallpaper-so-cute-steven-universe-fanart-digital-art-purple-amethyst-steven-universe-amethyst-steven-universe-steven-universe-gem.jpg">
+                 </div>
             content
-            
-
-                <div>
-                    <h2>Lisa's Website</h2>
-                    <p>Student at Belle Chasse High School</p>
-                    interest
-                <div>
+             <div class="content">
+                <h2>Lisa's Website</h2>
+                <p>Student at Belle Chasse High School</p>
+                    interests
+                <div class="interests">
                     <h3>Interests</h3>
+                    <ul>
+                        <li>Gaming</li>
+                        <li>Entertainment</li>
+                        <li>Reading</li>
+                        </ul>
                 </div>
-
-                </div>
+             </div>
             </main>
          </div>
     </body>
