add index.html and css files

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             </nav>
           
             <main>
-                side bar
+               <!--side bar-->
                 <div class="sidebar">
                   <img class="sidebar-img" src="https://e0.pxfuel.com/wallpapers/105/67/desktop-wallpaper-so-cute-steven-universe-fanart-digital-art-purple-amethyst-steven-universe-amethyst-steven-universe-steven-universe-gem.jpg">
                  </div>
-            content
+            <!--content-->
              <div class="content">
                 <h2>Lisa's Website</h2>
                 <p>Student at Belle Chasse High School</p>
-                    interests
+                   <!-- interests-->
                 <div class="interests">
                     <h3>Interests</h3>
                     <ul>
