--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -71,6 +71,11 @@
 			turn it around! 
 			*/
 			function update() {
+				moveBoxTo(100)
+				moveBoxTo(190)
+				moveBoxTo(275)
+				moveBoxTo(356)
+				moveBoxTo(477)
 				
 
 			};
