--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,6 +62,10 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
+
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 			
 
 			
@@ -71,11 +75,11 @@
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo(100)
-				moveBoxTo(190)
-				moveBoxTo(275)
-				moveBoxTo(356)
-				moveBoxTo(477)
+				moveBoxTo(positionX)
+				positionX = positionX + 10;
+				if (positionX > 200){
+					speed
+				}
 				
 
 			};
@@ -86,7 +90,13 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				positionX = 0;
 				
+				points = points + 1;
+
+				changeBoxText(points);
+
+				speed = speed + 3;
 
 
 			};
