--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(146, 0, 12);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
@@ -17,9 +17,14 @@
 			top: 100px;
 			left: 0px;  /* <--- Change me! */
 		}
+
+
 		.board{
 			height: 100vh;
 		}
+		body{
+		background-image: url(https://media.tenor.com/_bUOcTQAFYkAAAAC/doodlebops-dancing.gif);
+	}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
@@ -28,6 +33,8 @@
 	<!-- HTML for the box -->
 	<div class="box">?</div>
 
+
+	
 	<script>
 		(function(){
 			'use strict'
@@ -42,14 +49,15 @@
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
 
 			// Every 50 milliseconds, call the update Function (see below)
-			setInterval(update, 50);
+			 setInterval(update, 50)
+
 			
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX) {
-				box.css("left", newPositionX);
+				box.css("left", newPositionX);	
 			}
 
 			// changes the text displayed on the Box
@@ -65,7 +73,15 @@
 
 			var positionX = 0;
 			var points = 0;
-			var speed = 10;
+			var speed = 10; 
+
+			var colorStr = "rgb(50, 25, 250)";
+box.css('background-color', colorStr);
+
+
+			function getRandomColor() {
+				(colorStr);
+			}
 			
 
 			
@@ -75,7 +91,7 @@
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo(positionX)
+				moveBoxTo(positionX, positionY)
 				positionX = positionX + speed;
 				if (positionX > boardWidth){
 					speed = -speed
@@ -96,7 +112,7 @@
 			function handleBoxClick() {
 				positionX = 0;
 				
-				speed = speed + 20;
+				speed = speed + 3;
 				
 				points = points + 1;
 
