--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -91,7 +91,7 @@ box.css('background-color', colorStr);
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo(positionX, positionY)
+				moveBoxTo(positionX)
 				positionX = positionX + speed;
 				if (positionX > boardWidth){
 					speed = -speed
